adds more changes to open api spec and code gen
