# login/openapi.yaml
@@ -69,6 +69,7 @@ paths:
       operationId: generateToken
       requestBody:
         description: Token request body
+        required: true
         content:
           application/x-www-form-urlencoded:
             schema:
@@ -130,8 +131,15 @@ paths:
           schema:
             type: string
             example: baseUrl/oauth/callback
+        - name: state
+          in: query
+          description: 'An opaque value the client adds to the initial request that is included when redirecting back to the client. This value must be used by the client to prevent CSRF attacks.'
+          schema:
+            type: string
+            example: adfckjla1234
       requestBody:
         description: User login credentials
+        required: true
         content:
           application/json:
             schema:
@@ -209,11 +217,13 @@ components:
   schemas:
     DefaultAPIResponse:
       type: object
+      required: [message]
       properties:
         message:
           type: string
     LoginCredentials:
       type: object
+      required: [username, password]
       properties:
         username:
           type: string
@@ -221,6 +231,7 @@ components:
           type: string
     TokenResponse:
       type: object
+      required: [access_token, refresh_token, token_type]
       properties:
         access_token:
           type: string
@@ -263,14 +274,6 @@ components:
         code_verifier:
           description: 'Cryptographically random key that was used to generate the code_challenge passed to /authorize. Required for PKCE'
           type: string
-        username:
-          description: 'username used for password grant_type. Required for password grant_type'
-          type: string
-          example: admin
-        password:
-          description: 'password used for password grant_type. Required for password grant_type'
-          type: string
-          example: somePassword
         refresh_token:
           description: 'refresh token needed to regenerate JWT. Required for refresh grant_type'
           type: string   
